implemented probing logic